--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "sass": "^1.56.1"
