--- a/package.json
+++ b/package.json
@@ -14,16 +14,24 @@
     "@astrojs/node": "^3.1.0",
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "antd": "^5.1.7",
     "astro": "^1.6.11",
     "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "sass": "^1.56.1"
